CRITICAL FRONTEND FIX: Add Dockerfile.frontend for Render deployment, update branding to ChronaWorkFlow

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta name="description" content="AccuBooks - Modern Accounting Software" />
+    <meta name="description" content="ChronaWorkFlow - Enterprise Workflow Automation SaaS" />
     <meta name="theme-color" content="#ffffff" />
-    <title>AccuBooks - Modern Accounting Software</title>
+    <title>ChronaWorkFlow - Enterprise Workflow Automation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
